--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Cozy-Farming-Game.sln"
+    "dotnet.defaultSolution": "Cozy-Farm-Game.sln"
 }
